--- a/Program/Program.vcxproj
+++ b/Program/Program.vcxproj
@@ -127,23 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Computer.cpp" />
-    <ClCompile Include="Keyboard.cpp" />
-    <ClCompile Include="Marine.cpp" />
-    <ClCompile Include="Mouse.cpp" />
-    <ClCompile Include="Phone.cpp" />
+    <ClCompile Include="Goliath.cpp" />
+    <ClCompile Include="Mechanic.cpp" />
     <ClCompile Include="Program.cpp" />
-    <ClCompile Include="Transform.cpp" />
-    <ClCompile Include="Unit.cpp" />
+    <ClCompile Include="Siege_Tank.cpp" />
+    <ClCompile Include="Vulture.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Computer.h" />
-    <ClInclude Include="Keyboard.h" />
-    <ClInclude Include="Marine.h" />
-    <ClInclude Include="Mouse.h" />
-    <ClInclude Include="Phone.h" />
-    <ClInclude Include="Transform.h" />
-    <ClInclude Include="Unit.h" />
+    <ClInclude Include="Goliath.h" />
+    <ClInclude Include="Mechanic.h" />
+    <ClInclude Include="Siege_Tank.h" />
+    <ClInclude Include="Vulture.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
