--- a/Program/Program.vcxproj.filters
+++ b/Program/Program.vcxproj.filters
@@ -15,51 +15,33 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Unit.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Marine.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Program.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Computer.cpp">
+    <ClCompile Include="Mechanic.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Mouse.cpp">
+    <ClCompile Include="Vulture.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Keyboard.cpp">
+    <ClCompile Include="Siege_Tank.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Transform.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Phone.cpp">
+    <ClCompile Include="Goliath.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Unit.h">
+    <ClInclude Include="Mechanic.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Marine.h">
+    <ClInclude Include="Vulture.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Computer.h">
+    <ClInclude Include="Siege_Tank.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Mouse.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Keyboard.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Transform.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Phone.h">
+    <ClInclude Include="Goliath.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
