--- a/Program/Program.vcxproj.filters
+++ b/Program/Program.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Goliath.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Factory.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Mechanic.h">
@@ -42,6 +45,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Goliath.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Factory.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
