--- a/Program/Program.vcxproj
+++ b/Program/Program.vcxproj
@@ -127,19 +127,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Factory.cpp" />
-    <ClCompile Include="Goliath.cpp" />
-    <ClCompile Include="Mechanic.cpp" />
+    <ClCompile Include="Beacon.cpp" />
+    <ClCompile Include="Hydra.cpp" />
+    <ClCompile Include="Lurker.cpp" />
     <ClCompile Include="Program.cpp" />
-    <ClCompile Include="Siege_Tank.cpp" />
-    <ClCompile Include="Vulture.cpp" />
+    <ClCompile Include="Zerg.cpp" />
+    <ClCompile Include="Zergling.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Factory.h" />
-    <ClInclude Include="Goliath.h" />
-    <ClInclude Include="Mechanic.h" />
-    <ClInclude Include="Siege_Tank.h" />
-    <ClInclude Include="Vulture.h" />
+    <ClInclude Include="Beacon.h" />
+    <ClInclude Include="Hydra.h" />
+    <ClInclude Include="Lurker.h" />
+    <ClInclude Include="Zerg.h" />
+    <ClInclude Include="Zergling.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
